--- a/packages/contact/package.json
+++ b/packages/contact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell",
+  "name": "contact",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,16 +14,15 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "contact": "^0.1.0",
     "craco-module-federation": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-loader-spinner": "^5.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
     "styled-components": "^5.3.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
@@ -48,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.23"
   }
 }
