--- a/packages/about/package.json
+++ b/packages/about/package.json
@@ -18,7 +18,7 @@
     "craco-module-federation": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-loader-spinner": "^5.1.4",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
     "styled-components": "^5.3.3",
